--- a/bevy_wasm/Cargo.toml
+++ b/bevy_wasm/Cargo.toml
@@ -7,18 +7,19 @@ license = "MIT OR Apache-2.0"
 name = "bevy_wasm"
 readme = "../README.md"
 repository = "https://github.com/BrandonDyer64/bevy_wasm"
-version = "0.10.1"
+version = "0.13.0"
 
 [dependencies]
 anyhow = "1.0"
-bevy_wasm_shared = {path = "../bevy_wasm_shared", version = "0.10"}
+bevy_wasm_shared = { path = "../bevy_wasm_shared", version = "0.13.0" }
 bincode = "1.3"
-colored = "2.0"
+colored = "2.1"
 serde = "1.0"
+thiserror = "1.0.57"
 tracing = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = "5"
+wasmtime = "18"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
@@ -28,4 +29,4 @@ web-sys = "0.3"
 [dependencies.bevy]
 default-features = false
 features = ["bevy_asset"]
-version = "0.10"
+version = "0.13"
