Support Cargo Make to build
- Split bevy_wasm_sys in bevy_wasm_sys and bevy_wasm_sys_core. bevy_wasm_sys_core does not contain any reference to Bevy. This is for sample cube_without_bevy. Features are additive in Rust and cannot be used to toggle a feature on and off, they need to be in separate crate if you need them off.

- Runtime still not working, still got some linker errors.

--- a/examples/cubes/mod_without_bevy/Cargo.toml
+++ b/examples/cubes/mod_without_bevy/Cargo.toml
@@ -10,8 +10,6 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-cubes_protocol = {path = "../cubes_protocol"}
+cubes_protocol = { path = "../cubes_protocol" }
 
-[dependencies.bevy_wasm_sys]
-default-features = false # <- because we don't want any Bevy stuff
-path = "../../../bevy_wasm_sys"
+bevy_wasm_sys_core.workspace = true
