--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "bevy_wasm",
   "bevy_wasm_shared",
   "bevy_wasm_sys",
+  "bevy_wasm_sys_core",
   "examples/cubes/cubes",
   "examples/cubes/cubes_protocol",
   "examples/cubes/mod_with_bevy",
@@ -15,6 +16,38 @@ members = [
   "examples/shared_resources/shared_resources_protocol",
 ]
 resolver = "2"
+
+[workspace.dependencies]
+# Project dependencies
+bevy_wasm = { path = "bevy_wasm" }
+bevy_wasm_shared = { path = "bevy_wasm_shared" }
+bevy_wasm_sys_core = { path = "bevy_wasm_sys_core" }
+bevy_wasm_sys = { path = "bevy_wasm_sys" }
+cubes_protocol = { path = "examples/cubes/cubes_protocol" }
+simple_protocol = { path = "examples/simple/simple_protocol" }
+shared_resources_protocol = { path = "examples/shared_resources/shared_resources_protocol" }
+
+# External dependencies
+anyhow = "1.0"
+bevy = { version = "0.13.0", features = [
+  "bevy_asset",
+], default-features = false }
+bevy_app = { version = "0.13.0" }
+bevy_derive = { version = "0.13.0" }
+bevy_ecs = "0.13.0"
+bevy_math = { version = "0.13.0" }
+bevy_reflect = { version = "0.13.0" }
+bevy_transform = { version = "0.13.0", features = ["serialize"] }
+bincode = "1.3"
+colored = "2.1"
+js-sys = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0.57"
+tracing = "0.1"
+wasi-common = "18.0.1"
+wasm-bindgen = "0.2"
+wasmtime = "18"
+web-sys = "0.3"
 
 [profile.release-wasm]
 debug = false
