--- a/bevy_wasm/Cargo.toml
+++ b/bevy_wasm/Cargo.toml
@@ -10,23 +10,20 @@ repository = "https://github.com/BrandonDyer64/bevy_wasm"
 version = "0.13.0"
 
 [dependencies]
-anyhow = "1.0"
-bevy_wasm_shared = { path = "../bevy_wasm_shared", version = "0.13.0" }
-bincode = "1.3"
-colored = "2.1"
-serde = "1.0"
-thiserror = "1.0.57"
-tracing = "0.1"
+anyhow.workspace = true
+bevy_wasm_shared.workspace = true
+bevy.workspace = true
+bincode.workspace = true
+colored.workspace = true
+serde.workspace = true
+thiserror.workspace = true
+tracing.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-wasmtime = "18"
+wasmtime.workspace = true
+wasi-common.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3"
-wasm-bindgen = "0.2"
-web-sys = "0.3"
-
-[dependencies.bevy]
-default-features = false
-features = ["bevy_asset"]
-version = "0.13"
+js-sys.workspace = true
+wasm-bindgen.workspace = true
+web-sys.workspace = true
