--- a/bevy_wasm_sys_core/Cargo.toml
+++ b/bevy_wasm_sys_core/Cargo.toml
@@ -4,21 +4,12 @@ description = "Import into your wasm scripts. Use with the bevy_wasm crate."
 edition = "2021"
 keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
 license = "MIT OR Apache-2.0"
-name = "bevy_wasm_sys"
+name = "bevy_wasm_sys_core"
 readme = "../README.md"
 repository = "https://github.com/BrandonDyer64/bevy_wasm"
 version = "0.13.0"
 
 [dependencies]
-bevy_app = { workspace = true }
-bevy_derive = { workspace = true }
-bevy_ecs = { workspace = true }
-bevy_math = { workspace = true }
-bevy_reflect = { workspace = true }
-bevy_transform = { workspace = true, features = ["serialize"] }
-
-
 bevy_wasm_shared.workspace = true
-bevy_wasm_sys_core.workspace = true
 bincode.workspace = true
 serde.workspace = true
