--- a/examples/cubes/cubes_protocol/Cargo.toml
+++ b/examples/cubes/cubes_protocol/Cargo.toml
@@ -6,6 +6,6 @@ publish = false
 version = "123.456.789"
 
 [dependencies]
-bevy_ecs = "0.13.0"
-bevy_wasm_shared = { path = "../../../bevy_wasm_shared" }
+bevy_ecs.workspace = true
+bevy_wasm_shared.workspace = true
 serde = { version = "1.0", features = ["derive"] }
