--- a/examples/simple/simple/Cargo.toml
+++ b/examples/simple/simple/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-build = "build.rs"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 name = "simple"
@@ -8,5 +7,5 @@ version = "0.1.0"
 
 [dependencies]
 bevy = "0.13"
-bevy_wasm = { path = "../../../bevy_wasm" }
-simple_protocol = { path = "../simple_protocol" }
+bevy_wasm.workspace = true
+simple_protocol.workspace = true
