--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ bevy_reflect = { version = "0.13.0" }
 bevy_transform = { version = "0.13.0", features = ["serialize"] }
 bincode = "1.3"
 colored = "2.1"
+getrandom = "0.2.12"
 js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.57"
