--- a/bevy_wasm/Cargo.toml
+++ b/bevy_wasm/Cargo.toml
@@ -20,6 +20,7 @@ thiserror.workspace = true
 tracing.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+getrandom.workspace = true
 wasmtime.workspace = true
 wasi-common.workspace = true
 
