wasm working inside a browser
- Had to reexport all wasm-bindgen from getrandom() to make it work.
- Also had to use wasm-bindgen --target web to generate the required js bindings
- Use miniserve to be able to load the webpage and the wasm module.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "args": [],
             "console": "integratedTerminal",
-            "cwd": "G:/Github/turbo_bevy_wasm/examples/simple/simple",
+            "cwd": "${workspaceFolder}/examples/simple/simple",
             "environment": [],
             "name": "Simple",
             "preLaunchTask": "build: simple",
