--- a/bevy_wasm_sys/Cargo.toml
+++ b/bevy_wasm_sys/Cargo.toml
@@ -10,13 +10,7 @@ repository = "https://github.com/BrandonDyer64/bevy_wasm"
 version = "0.13.2"
 
 [dependencies]
-bevy_app = { workspace = true }
-bevy_derive = { workspace = true }
-bevy_ecs = { workspace = true }
-bevy_math = { workspace = true }
-bevy_reflect = { workspace = true }
-bevy_transform = { workspace = true, features = ["serialize"] }
-
+bevy.workspace = true
 
 bevy_wasm_shared.workspace = true
 bevy_wasm_sys_core.workspace = true
