--- a/examples/cubes/mod_with_bevy/Cargo.toml
+++ b/examples/cubes/mod_with_bevy/Cargo.toml
@@ -10,7 +10,7 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy_ecs.workspace = true
+bevy.workspace = true
 cubes_protocol.workspace = true
 
 bevy_wasm_sys.workspace = true
