--- a/examples/shared_resources/shared_resources_protocol/Cargo.toml
+++ b/examples/shared_resources/shared_resources_protocol/Cargo.toml
@@ -6,8 +6,6 @@ publish = false
 version = "0.1.0"
 
 [dependencies]
-bevy_derive = "0.13"
-bevy_ecs = "0.13"
-bevy_reflect = "0.13"
-bevy_wasm_shared = {path = "../../../bevy_wasm_shared"}
-serde = {version = "1.0", features = ["derive"]}
+bevy.workspace = true
+bevy_wasm_shared = { path = "../../../bevy_wasm_shared" }
+serde = { version = "1.0", features = ["derive"] }
