--- a/examples/simple/simple_mod/Cargo.toml
+++ b/examples/simple/simple_mod/Cargo.toml
@@ -10,7 +10,7 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy_ecs.workspace = true
+bevy.workspace = true
 bevy_wasm_sys.workspace = true
 serde.workspace = true
 simple_protocol.workspace = true
