--- a/examples/simple/simple_protocol/Cargo.toml
+++ b/examples/simple/simple_protocol/Cargo.toml
@@ -7,5 +7,5 @@ version = "0.1.0"
 
 [dependencies]
 bevy_wasm_shared.workspace = true
-bevy_ecs.workspace = true
+bevy.workspace = true
 serde.workspace = true
