--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,22 +29,7 @@ shared_resources_protocol = { path = "examples/shared_resources/shared_resources
 
 # External dependencies
 anyhow = "1.0"
-bevy = { version = "0.13.2", default-features = false, features = [
-  "bevy_asset",
-  "bevy_gilrs",
-  "bevy_scene",
-  "bevy_winit",
-  "bevy_core_pipeline",
-  "bevy_pbr",
-  "bevy_gltf",
-  "bevy_render",
-  "bevy_text",
-  "bevy_ui",
-  "png",
-  "bevy_gizmos",
-  "tonemapping_luts",
-  "default_font",
-] }
+bevy = { version = "0.13.2", default-features = false, features = [] }
 bincode = "1.3"
 colored = "2.1"
 getrandom = "0.2.12"
@@ -52,10 +37,10 @@ js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.57"
 tracing = "0.1"
-wasi-common = "19.0.2"
-wasm-bindgen = "0.2"
-wasmtime = "19"
-web-sys = "0.3"
+wasi-common = "20.0.0"
+wasm-bindgen = "0.2.92"
+wasmtime = "20.0.0"
+web-sys = "0.3.69"
 
 [profile.release-wasm]
 debug = false
