- Add more wbdingen functions for web version
Use Parking lot instead of std::mutex

--- a/examples/simple/simple_mod/Cargo.toml
+++ b/examples/simple/simple_mod/Cargo.toml
@@ -14,3 +14,7 @@ bevy.workspace = true
 bevy_wasm_sys.workspace = true
 serde.workspace = true
 simple_protocol.workspace = true
+
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+web-sys.workspace = true
