--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,18 +29,34 @@ shared_resources_protocol = { path = "examples/shared_resources/shared_resources
 
 # External dependencies
 anyhow = "1.0"
-bevy = { version = "0.13.2", default-features = false, features = [] }
+bevy = { version = "0.13.2", default-features = false, features = [
+  "bevy_asset",
+  "bevy_core_pipeline",
+  "bevy_gilrs",
+  "bevy_gizmos",
+  "bevy_gltf",
+  "bevy_pbr",
+  "bevy_render",
+  "bevy_scene",
+  "bevy_text",
+  "bevy_ui",
+  "bevy_winit",
+  "default_font",
+  "png",
+  "tonemapping_luts",
+  "webgl2",
+] }
 bincode = "1.3"
 colored = "2.1"
-getrandom = "0.2.14"
 js-sys = "0.3"
+parking_lot = "0.12.2"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.59"
 tracing = "0.1"
 wasi-common = "20.0.0"
 wasm-bindgen = "0.2.92"
 wasmtime = "20.0.0"
-web-sys = "0.3.69"
+web-sys = { version = "0.3.69", features = ["console", "WorkerGlobalScope"] }
 
 [profile.release-wasm]
 debug = false
