--- a/bevy_wasm/Cargo.toml
+++ b/bevy_wasm/Cargo.toml
@@ -15,12 +15,12 @@ bevy.workspace = true
 bevy_wasm_shared.workspace = true
 bincode.workspace = true
 colored.workspace = true
+parking_lot.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-getrandom.workspace = true
 wasmtime.workspace = true
 wasi-common.workspace = true
 
